--- a/webapp/application.properties
+++ b/webapp/application.properties
@@ -12,8 +12,8 @@ password=cardoso
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #hibernate.hbm2ddl.auto=create-drop
-hibernate.hbm2ddl.auto=create
-#hibernate.hbm2ddl.auto=update
+#hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
 hibernate.format_sql=true
