--- a/pom.xml
+++ b/pom.xml
@@ -18,18 +18,9 @@
 		<java-version>1.8</java-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<!-- spring-framework -->
-		<spring-framework.version>4.3.3.RELEASE</spring-framework.version>
-		<spring-framework-data.version>1.10.4.RELEASE</spring-framework-data.version>
-		<spring-framework-orm.version>1.4.1.RELEASE</spring-framework-orm.version>
-		<spring-framework-security.version>4.1.3.RELEASE</spring-framework-security.version>
-		<spring-framwwork-security-jwt.verion>1.0.5.RELEASE</spring-framwwork-security-jwt.verion>
 
 		<!-- jackson -->
 		<jackson.version>2.7.5</jackson.version>
-
-		<!-- Hibernate / JPA -->
-		<hibernate.version>5.1.2.Final</hibernate.version>
 
 		<!-- Apache Commons Lang -->
 		<apache.commons.lang.version>3.3.2</apache.commons.lang.version>
@@ -77,6 +68,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
 		<dependency>
