Adicionando o contexto para o spring

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -17,3 +17,6 @@ hibernate.hbm2ddl.auto=update
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
 hibernate.format_sql=true
+
+#http.mappers.json-pretty-print=true
+#spring.jackson.serialization.INDENT_OUTPUT=true
