--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
 		<java-version>1.8</java-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-
 		<!-- jackson -->
 		<jackson.version>2.7.5</jackson.version>
 
@@ -52,6 +51,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-test-autoconfigure</artifactId>
 		</dependency>
 
 		<dependency>
