Venda - Buscar produto, vender produto #7
Concluído.

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -15,8 +15,10 @@ hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #hibernate.hbm2ddl.auto=create
 hibernate.hbm2ddl.auto=update
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.format_sql=true
 
 #http.mappers.json-pretty-print=true
 #spring.jackson.serialization.INDENT_OUTPUT=true
+
+#spring.profiles.active=test
